@@ -1,6 +1,6 @@
 <HTML>
 <!-- THIS PAGE IS AUTOMATICALLY GENERATED.  DO NOT EDIT. -->
-<!-- Tue Oct 16 13:40:35 2001 -->
+<!-- Tue Oct 16 14:20:41 2001 -->
 <!-- USING HT2HTML 1.2 -->
 <!-- SEE http://barry.wooz.org/software/ht2html -->
 <!-- User-specified headers:
@@ -138,10 +138,9 @@ Author
 <TD VALIGN=TOP WIDTH="90%"><BR>
 <h3>TMDA Configuration Overview</h3>
 
-Read the <em>Server Configuration</em> section, and then optionally
-<em>Client Configuration</em> (both under the
-<strong>Configuration</strong> sidebar to the left).
-
+Read the <a href="config-server.html">Server Configuration</a>
+section, and then optionally 
+<a href="config-client.html">Client Configuration</a>.
 
 </TD><!-- end of body cell -->
 </TR><!-- end of sidebar/body row -->
